--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "author": "Ali Solanki, Daniel Eugene Botha",
   "license": "MIT",
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+    "start": "react-scripts start",
+    "build": "react-scripts build
 },
   "browserslist": {
     "production": [
