--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build
+    "build": "react-scripts build"
 },
   "browserslist": {
     "production": [
