--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the_masked_punks_nft_dapp",
   "version": "1.0.0",
-  "description": "The Stripes NFT minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
+  "description": "The Masked punks NFT minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
@@ -15,7 +15,7 @@
     "web3": "^1.5.1",
     "web3-eth-contract": "^1.5.2"
   },
-  "author": "Ali Solanki, Daniel Eugene Botha",
+  "author": "SP",
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
